--- a/backEnd/hairdressin/src/main/resources/application.yaml
+++ b/backEnd/hairdressin/src/main/resources/application.yaml
@@ -1,18 +1,6 @@
-server:
-    port: 8080
-
 spring:
-
   application:
     name: hairdressin
 
-  datasource:
-    url: "jdbc:mysql://localhost:3306/hairdressin"
-    username: "root"
-    password: "root"
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    hibernate.ddl-auto: update
-
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}  
