--- a/backEnd/hairdressin/src/main/resources/application-dev.yaml
+++ b/backEnd/hairdressin/src/main/resources/application-dev.yaml
@@ -1,13 +1,12 @@
 spring:
-
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: ${DB_URL:jdbc:mysql://localhost:3306/hairdressin}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:root}
 
   jpa:
     hibernate:
       ddl-auto: update
 
 server:
-  port: ${SERVER_PORT}
+  port: ${SERVER_PORT:8080} 
