--- a/backEnd/hairdressin/src/main/resources/application-dev.yaml
+++ b/backEnd/hairdressin/src/main/resources/application-dev.yaml
@@ -1,12 +1,17 @@
 spring:
+  application:
+    name: hairdressin
+
   datasource:
-    url: ${DB_URL:jdbc:mysql://localhost:3306/hairdressin}
-    username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:root}
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQLDialect
 
 server:
-  port: ${SERVER_PORT:8080} 
+  port: ${SERVER_PORT}
