--- a/backEnd/hairdressin/src/main/resources/application.yaml
+++ b/backEnd/hairdressin/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: hairdressin
-
+    name: hairdressin  
+  
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:dev}  
+    active: ${SPRING_PROFILES_ACTIVE}
