--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -63,6 +63,7 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
+          cd backEnd/hairdressin
           docker build -t agustinribotta/hairdresin-app:$VERSION .
           docker push agustinribotta/hairdresin-app:$VERSION
 
