--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -81,7 +81,7 @@ jobs:
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
-          git remote set-url origin https://github.com/AgustinRibotta/PetGrooming
+          git remote set-url origin dev git@github.com:AgustinRibotta/PetGrooming.git
 
           if git diff --quiet backEnd/hairdressin/kubernetes/app-deployment.yaml; then
             echo "No changes to commit"
