--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -72,9 +72,13 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-          cd frontEnd
-          npm install
-          npm run build
+            pwd
+            ls -la
+            cd frontEnd
+            pwd
+            ls -la
+            npm install
+            npm run build
 
       - name: Authenticate with Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
