--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -72,20 +72,20 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-            pwd
-            ls -la
-            cd frontEnd
-            pwd
-            ls -la
-            npm install
-            npm run build
+          pwd
+          ls -la
+          cd frontend
+          pwd
+          ls -la
+          npm install
+          npm run build
 
       - name: Authenticate with Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build and Push Docker Image
         run: |
-          cd frontEnd
+          cd frontend
           docker build -t agustinribotta/hairdresin-frontend:$VERSION .
           docker push agustinribotta/hairdresin-frontend:$VERSION
 
