--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Build Java application using Maven
         run: |
-          cd backEnd
+          cd backend
           mvn clean install -DskipTests
 
       - name: Authenticate with Docker Hub
@@ -48,13 +48,13 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          cd backEnd
+          cd backend
           docker build -t agustinribotta/hairdresin-app:$VERSION .
           docker push agustinribotta/hairdresin-app:$VERSION
 
       - name: Update backend deployment YAML
         run: |
-          sed -i "s|agustinribotta/hairdresin-app:.*|agustinribotta/hairdresin-app:$VERSION|" kubernetes/backEnd-deployment.yaml
+          sed -i "s|agustinribotta/hairdresin-app:.*|agustinribotta/hairdresin-app:$VERSION|" kubernetes/backend-deployment.yaml
 
   frontend:
     runs-on: ubuntu-latest
