add pwd and ls -a in Build Java application using Maven

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Build Java application using Maven
         run: |
+          pwd
+          ls -a 
           cd backend
           mvn clean install -DskipTests
 
