--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -56,9 +56,6 @@ jobs:
         run: |
           sed -i "s|agustinribotta/hairdresin-app:.*|agustinribotta/hairdresin-app:$VERSION|" kubernetes/backend-deployment.yaml
 
-      - name: Show backend deployment YAML content
-        run: cat kubernetes/backend-deployment.yaml
-
   frontend:
     runs-on: ubuntu-latest
     needs: generate-version
@@ -91,9 +88,7 @@ jobs:
       - name: Update frontend deployment YAML
         run: |
           sed -i "s|agustinribotta/hairdresin-frontend:.*|agustinribotta/hairdresin-frontend:$VERSION|" kubernetes/frontend-deployment.yaml
-      - name: Show frontend deployment YAML content
-        run: cat kubernetes/frontend-deployment.yaml
-        
+
   push-yamls:
     runs-on: ubuntu-latest
     needs: [backend, frontend]
@@ -108,9 +103,15 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-      - name: List files in kubernetes folder
-        run: ls -l kubernetes/
+      - name: Show git status
+        run: git status
 
+      - name: Show staged changes
+        run: git diff --cached
+
+      - name: Show unstaged changes
+        run: git diff
+              
       - name: Commit and Push updated YAMLs
         run: |
           git config --global user.email "github-actions@github.com"
