--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -56,6 +56,28 @@ jobs:
         run: |
           sed -i "s|agustinribotta/hairdresin-app:.*|agustinribotta/hairdresin-app:$VERSION|" kubernetes/backend-deployment.yaml
 
+      - name: Set up SSH for Git push
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      - name: Commit and Push updated backend YAML
+        run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git remote set-url origin git@github.com:AgustinRibotta/PetGrooming.git
+
+          git add kubernetes/backend-deployment.yaml
+
+          if git diff --cached --quiet; then
+            echo "No backend deployment YAML changes to commit."
+          else
+            git commit -m "Update backend image version to $VERSION"
+            git push origin main
+          fi
+
   frontend:
     runs-on: ubuntu-latest
     needs: generate-version
@@ -89,13 +111,6 @@ jobs:
         run: |
           sed -i "s|agustinribotta/hairdresin-frontend:.*|agustinribotta/hairdresin-frontend:$VERSION|" kubernetes/frontend-deployment.yaml
 
-  push-yamls:
-    runs-on: ubuntu-latest
-    needs: [backend, frontend]
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
       - name: Set up SSH for Git push
         run: |
           mkdir -p ~/.ssh
@@ -103,36 +118,17 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-      - name: Show git status
-        run: git status
-
-      - name: Show staged changes
-        run: git diff --cached
-
-      - name: Show unstaged changes
-        run: git diff
-        
-      - name: Show backend deployment YAML content
-        run: cat kubernetes/backend-deployment.yaml
-
-      - name: Show frontend deployment YAML content
-        run: cat kubernetes/frontend-deployment.yaml
-
-      - name: List kubernetes directory files
-        run: ls -l kubernetes
-
-      - name: Commit and Push updated YAMLs
+      - name: Commit and Push updated frontend YAML
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
           git remote set-url origin git@github.com:AgustinRibotta/PetGrooming.git
 
-          git add kubernetes/backend-deployment.yaml
           git add kubernetes/frontend-deployment.yaml
 
           if git diff --cached --quiet; then
-            echo "No deployment YAML changes to commit."
+            echo "No frontend deployment YAML changes to commit."
           else
-            git commit -m "Update backend and frontend image versions"
+            git commit -m "Update frontend image version to $VERSION"
             git push origin main
           fi
