--- a/kubernetes/frontend-service.yaml
+++ b/kubernetes/frontend-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: react-app
-  namespace: petapp-main
+  name: react-service
 spec:
-  type: NodePort
   selector:
-    app: react
+    app: react-app
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
-      nodePort: 30080
+      nodePort: 30414
+  type: NodePort
