Config ip front end

--- a/kubernetes/frontend-deployment.yaml
+++ b/kubernetes/frontend-deployment.yaml
@@ -18,6 +18,9 @@ spec:
           imagePullPolicy: Always 
           ports:
             - containerPort: 3000
+          env:
+            - name: REACT_APP_API_BASE_URL
+              value: REACT_APP_API_BASE_URL
 
 
 
