--- a/kubernetes/backend-service.yaml
+++ b/kubernetes/backend-service.yaml
@@ -7,6 +7,7 @@ spec:
     app: springboot-app
   ports:
     - protocol: TCP
-      port: 80
+      port: 8081
       targetPort: 8081
+      nodePort: 30415
   type: NodePort
